# dir

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .licensei.toml  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  API_SPEC.md  ARCHITECTURE.md  AUTHZ.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DAG.md  EXAMPLE.md  HELP_TEXT_UPDATE_SUMMARY.md  MAINTAINERS.md  README.md  READMEB.md  RELEASE.md  SECURITY.md  STORAGE.md  Taskfile.deps.yml  Taskfile.vars.yml  Taskfile.yml  USAGE.md  codecov.yml  config-change.yml  data.json  docker-bake.hcl  generate-docs.sh  go.work.disabled  image.dockerfile  post-sync.md  record.json  renovate.json  runtime.md  (+7 more)
.github/: CODEOWNERS  labels.yml
.skill/: SKILL.md
1.4.0/: 404.html  index.html  sitemap.xml
1.5.0/: 404.html  index.html  sitemap.xml
1.6.1/: sitemap.xml
HomebrewFormula/: README.md  dirctl.rb
api/: Taskfile.yml  buf.gen.yaml  buf.yaml  go.mod  go.sum
api/python/: pyproject.toml
api/python/core/v1alpha1/: extension_pb2.py
cli/: .release-please-config.yml  Dockerfile  README.md  Taskfile.yml  build.config.yaml  build.config.yml  cli.go  go.mod  go.sum
client/: .release-please-config.yml  README.md  client.go  client_test.go  config.go  events.go  github.go  github_api.go  github_test.go  go.mod  go.sum  (+32 more)
client/python/: README.md  client.py  client_methods.py  config.py  main.py  pyproject.toml  test_client.py
client/python/client/: client.py
client/python/proto/core/v1alpha1/: agent_pb2.py  agent_pb2.pyi  extension_pb2.py  locator_pb2.py  object_pb2.py  skill_pb2.py
client/python/proto/routing/v1alpha1/: peer_pb2.py  routing_service_pb2.py
client/python/proto/store/v1alpha1/: store_service_pb2.py
client/python/tests/: test_client.py
docs/mkdocs/: README.md  hooks.py  mkdocs.yml  pyproject.toml
docs/mkdocs/overrides/: main.html
sdk/dir-py/: .gitignore  .release-please-config.yml  README.md  pyproject.toml
sdk/dir-py/agntcy/dir/core/v1/: cid_pb2.py  cid_pb2.pyi  record_pb2.py  record_pb2.pyi  referrer_pb2.py  referrer_pb2.pyi  rules_pb2.py  rules_pb2.pyi
sdk/dir-py/agntcy/dir/events/v1/: event_service_pb2.py  event_service_pb2.pyi  event_service_pb2_grpc.py
sdk/dir-py/agntcy/dir/naming/v1/: domain_verification_pb2.py  domain_verification_pb2.pyi  name_verification_pb2.py  name_verification_pb2.pyi  naming_service_pb2.py  naming_service_pb2.pyi  naming_service_pb2_grpc.py
sdk/dir-py/agntcy/dir/routing/v1/: peer_pb2.py  peer_pb2.pyi  publication_service_pb2.py  publication_service_pb2.pyi  publication_service_pb2_grpc.py  record_query_pb2.py  record_query_pb2.pyi  routing_service_pb2.py  routing_service_pb2.pyi  routing_service_pb2_grpc.py
sdk/dir-py/agntcy/dir/runtime/v1/: discovery_service_pb2.py  discovery_service_pb2.pyi  discovery_service_pb2_grpc.py  process_pb2.py  process_pb2.pyi
sdk/dir-py/agntcy/dir/search/v1/: record_query_pb2.py  record_query_pb2.pyi  search_service_pb2.py  search_service_pb2.pyi  search_service_pb2_grpc.py
sdk/dir-py/agntcy/dir/sign/v1/: public_key_pb2.py  public_key_pb2.pyi  sign_service_pb2.py  sign_service_pb2.pyi  sign_service_pb2_grpc.py  signature_pb2.py  signature_pb2.pyi
sdk/dir-py/agntcy/dir/store/v1/: object_pb2.py  object_pb2.pyi  store_service_pb2.py  store_service_pb2.pyi  store_service_pb2_grpc.py  sync_service_pb2.py  sync_service_pb2.pyi  sync_service_pb2_grpc.py
sdk/dir-py/agntcy/dir_sdk/: utils.py
sdk/dir-py/agntcy/dir_sdk/client/: __init__.py  client.py  config.py  oauth_pkce.py  test_client.py  test_oauth_pkce.py  test_oidc_auth.py  token_cache.py
sdk/dir-py/agntcy/dir_sdk/models/: README.md  __init__.py  core_v1.py  events_v1.py  naming_v1.py  routing_v1.py  search_v1.py  sign_v1.py  store_v1.py
sdk/dir-py/agntcy_dir/client/: client.py  config.py  test_client.py
sdk/dir-py/agntcy_dir/models/: __init__.py
sdk/dir-py/example/: example.py  pyproject.toml
sdk/dir-py/src/agntcy_dir/client/: __init__.py  client.py  config.py  test_client.py
sdk/dir-py/src/agntcy_dir/models/: __init__.py
sdk/python/example/: pyproject.toml
(+2782 files in other folders)
