[project]
name = "agntcy-dir-proto-stubs"
version = "0.1.0"
description = "This package contains the python bindings for the proto stubs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages]
find = { include = ["core", "store", "routing"] }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
