[project]
name = "agtncy-dir"
version = "0.1.0"
description = "Directory SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agntcy-dir-grpc-python==1.74.1.1.20250902143656+38a679e0e504",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
